<resources>
    <string name="app_name" translatable="false">Marreply</string>
    <string name="tab_text_1" translatable="false">뉴스피드</string>
    <string name="tab_text_2" translatable="false">견적</string>
    <string name="tab_text_3" translatable="false">커뮤니티</string>
    <string name="tab_text_4" translatable="false">마이페이지</string>
    <string name="action_settings" translatable="false">설정</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_newsfeed">NewsfeedActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main_login">로그인</string>
    <string name="prompt_email">아이디 및 이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="action_register_pw_repeat">비밀번호 확인</string>
    <string name="error_invalid_email">이메일이 유효하지 않습니다</string>
    <string name="error_invalid_password">비밀번호가 너무 짧습니다</string>
    <string name="error_incorrect_password">비밀번호가 일치하지 않습니다.</string>
    <string name="error_field_required">아이디는 반드시 입력하셔야 됩니다.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test_bottom">TestBottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mypage">마이페이지</string>
    <string name="title_newsfeed">뉴스피드</string>
    <string name="title_calc">견적</string>
    <string name="title_comm">커뮤니티</string>
    <string name="title_activity_register2">회원가입</string>
    <string name="register_id">아이디</string>
    <string name="regidter_button">가입</string>
    <string name="news_large1">
        "ADAMAS 253\n"
        "\n"
        "카페 아마다스 입니다. 케이블 드라마 마이시크릿호텔에서 유인나씨의"
        "촬영장소로도 유명합니다.위치 자체고 너무 복잡한 곳에 자리잡지 않아서"
        "가장 좋고 독특한 외관 인테리어와 맛있는 브런치 메뉴를 만날 수 있습니다."
        "다이닝 메뉴의  경우 너무 예뻐서 먹기 아깝다는 평이 많습니다."
        "메뉴 외에도 가볍게 커피를 즐기고 이야기꽃 피우기에 안성맞춤입니다.\n"
        "\n"
        "\n"
        "인스퀘어\n"
        "\n"
        "캐쥬얼 다이닝 카페&amp;갤러리 인스퀘어 입니다. 인테리어, 소품쪽에 "
        "관심있는 분들이라면 기대하고 가셔도 좋습니다. 외관에서도 세월의 흔적이"
        "느껴집니다. 헤이리 터줏대감으로 불릴만큼 오랜시간동안 자리를 지키고"
        "있습니다. 날씨가 점점 풀리는 날, 블랙 자몽티 한잔과 달달한 마들렌으로"
        "지나가는 겨울을 즐기기에 충분합니다.\n"
        "\n"
        "\n"
        "콤프카페\n"
        "\n"
        "퍼니쳐카페라고 소개하고 싶습니다. 테라스에는 그네의자도 있어서 연인과"
        "알콩달콩 머물다 가기 좋은 곳입니다. 시그니쳐 커피로 향과 맛을 모두 충족"
        "시킬수 있는 곳으로 옥상에서 연인과 함께 아기자기한 헤이리마을과 "
        "여유로운 브런치로 일주일에 피로를 풀기에 충분합니다.\n"
    </string>
    <string name="news_large2">
        "전주 JTV웨딩 박람회 고객만족도 1위\n\n"

        "본격적인 결혼 준비를 진행하기에 앞서 정말 많은 예비신랑, 신부님이 "
        "실시간 웨딩정보를 얻기 위해 '전주 JTV웨딩 박람회'를 방문해주십니다.\n\n"

        "아무리 인터넷이 발달되서 어떤 정보든 시간과 장소 상관없이 알아볼 수 "
        "있다 하여도 결혼 준비를 완벽하게 진행하기에는 인터넷은 아무래도 "
        "부족한 부분이 있을 수 있기 마련입니다.\n\n"

        "그렇기에 많은 예비신랑, 신부님이 인터넷보다 정확하고 웨딩전문 "
        "플래너와 1:1 상담을 받을수 있는 '전주 JTV웨딩 박람회'를 통해 "
        "결혼준비를 시작하길 선호합니다.\n\n"

        "전주 최대 규모로 진행되는 '전주 JTV웨딩 박람회'같은 경우는 참여하는 "
        "업체 수는 물론이며 준비된 이벤트와 혜택의 폭이 상당합니다. 또한 50쌍 "
        "한정초대로 진행되는 이번 행사같은 경우는 복잡하고 정신없는 웨딩행사가 "
        "아닌 체계적인 시스템을 갖추어 진행하기에 신랑, 신부님은 단 하루 방문 "
        "으로도 결혼준비의 모든 것들을 알고 배워볼 수 있을 것입니다.\n\n"

        "인기 웨딩홀을 시작으로 신상 웨딩드레스 전시. 거기에 강남 청담의 유명 "
        "스튜디오까지 '전주 JTV웨딩 박람회'에 모두 모인다고 하니 볼거리 또한 "
        "넘쳐날 것입니다. 또한 푸짐한 경품 추첨 또한 '전주 JTV웨딩 박람회'의 "
        "즐거움을 한층 높여주는데요. 결혼 준비를 하러 왔다가 선물까지 푸짐하게 "
        "받아가니 집으로 돌아가는 신랑, 신부님의 발걸음은 깃털처럼 가벼울 것입니다.\n\n"
    </string>
</resources>